--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ body {
         linear-gradient(to right, #062961, #092e6bfb)
 }
 
-.navbar-nav .nav-link {}
 
 .navbar-nav {
     padding-right: 0%;
@@ -35,7 +34,6 @@ body {
     text-shadow: 0px 0px 7px white;
 }
 
-.navbar-nav .nav-link:hover {}
 
 .myLink:hover,
 .active,
@@ -80,9 +78,7 @@ body {
 
 }
 
-.brandX {
-    /* margin-left: 2rem; */
-}
+
 
 #sideNav .navbar-nav .nav-item .nav-link {
     font-weight: bolder;
@@ -351,3 +347,59 @@ section.resume-section .resume-section-content {
         font-size: 1.3rem;
     }
 }
+
+.myImgs {
+    display: flex;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+
+}
+
+.myImgs-img {
+    
+    height: 5em;
+    width: 5em;
+    padding: 0.5rem;
+    background-color: #d0e0f0;
+    color: #fff;
+    font-size: 1.2rem;
+    border-radius: 100%;
+    margin: 0.5%;
+        box-shadow: 0.2rem 0.2rem #0000007d;
+}
+.card-lang{
+    font-size: 0.3rem !important;
+}
+.progress {
+    height: 0.8rem !important;
+    font-size: 1rem;
+    background-color: #7c889c !important;
+    border-radius: 0.5rem !important;
+    width: 100%;
+}
+.progress-bar{
+    background-color: #072a63 !important;
+    color: yellow !important;
+}
+.card-color {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    /* height: 6em; */
+    /* width: 6em; */
+     background-color: rgba(255, 255, 255, 0) !important;
+     color: #072a63 !important;
+    color: #fff;
+    font-size: 1.2rem;
+    border-radius: 100%;
+    margin: 1%;
+    direction: ltr;
+    /* border:1px solid black !important; */
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.281),
+    0 4px 6px -2px rgba(0, 0, 0, 0.281) !important;
+    
+    /* padding:5px !important; */
+    }
+
+
