--- a/css/style.css
+++ b/css/style.css
@@ -169,8 +169,13 @@ section.resume-section {
 strong {
     color: #062961;
     text-shadow: 0.5px 0.5px rgb(0, 0, 0);
+    font-size: 1.3em;
 }
-
+.proj-info {
+padding-right: 1rem !important;
+padding-left: 1rem !important;
+}
+ 
 .h1 {
     color: #062961;
     text-align: center;
